hphp/hack/test/typecheck/array/disallow_incompatible_type_parameters_for_darray.php.exp
File "disallow_incompatible_type_parameters_for_darray.php", line 4, characters 10-30:
Incompatible field values (Typing[4110])
File "disallow_incompatible_type_parameters_for_darray.php", line 3, characters 33-35:
This is an int
File "disallow_incompatible_type_parameters_for_darray.php", line 4, characters 25-29:
It is incompatible with a bool
